# eks_validator

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EKS_VALIDATOR_SPECIFICATION.md  ENVIRONMENT_SETUP.md  MANIFEST.in  Makefile  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  config.example.yaml  discover_vpc.py  discover_vpc.sh  main.py  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  setup.py  test_basic.py  test_config.py
.github/workflows/: ci-cd.yml  code-quality.yml  dependency-updates.yml  release.yml  security.yml
docs/: api.md  index.md
eks_validator/: __init__.py
eks_validator/checkers/: addon_checker.py  application_checker.py  infrastructure_checker.py  monitoring_checker.py  networking_checker.py  storage_checker.py
eks_validator/config/: settings.py
eks_validator/core/: validator.py
eks_validator/templates/: validation_report.md.j2
eks_validator/utils/: report_generator.py
examples/: README.md  advanced-config.yaml  basic-config.yaml  ci-config.yaml
scripts/: release.sh  setup.sh  validate_sensitive_data.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_workflow.py
tests/unit/: test_config.py  test_main.py
